RESOLVED FIXED58155
BitmapImage::getFirstCGImageRefOfSize fails if the frameCount hasn't been initialized from the image source
https://bugs.webkit.org/show_bug.cgi?id=58155
Summary BitmapImage::getFirstCGImageRefOfSize fails if the frameCount hasn't been ini...
Brady Eidson
Reported 2011-04-08 13:04:40 PDT
BitmapImage::getFirstCGImageRefOfSize fails if the frameCount hasn't been initialized from the image source The method looped over m_frames.size() directly, when it should really use the frameCount() method so the frame count is properly initialized. <rdar://problem/9251767>
Attachments
Patch v1 (1.49 KB, patch)
2011-04-08 13:07 PDT, Brady Eidson
aroben: review+
beidson: commit-queue-
Brady Eidson
Comment 1 2011-04-08 13:07:51 PDT
Created attachment 88865 [details] Patch v1
Darin Adler
Comment 2 2011-06-18 11:56:49 PDT
Note You need to log in before you can comment on or make changes to this bug.