https://bugs.webkit.org/show_bug.cgi?id=58155 and part of <rdar://problem/9251767> BitmapImage::getFirstCGImageRefOfSize fails if the frameCount hasn't been initialized from the image source.

Reviewed by Adam Roben.

* platform/graphics/cg/ImageCG.cpp:
(WebCore::BitmapImage::getFirstCGImageRefOfSize): Call frameCount() instead of accessing m_frames.size() to
  make sure the frames are properly tallied first.



Canonical link: https://commits.webkit.org/73112@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83339 268f45cc-cd09-0410-ab3c-d52691b4dbfc